Add a custom XML logging formatter that support NDC logging. The custom XML logging formatter is configurable - it can generate output that resembles java.util.logging.XMLFormatter output or output that resembles log4j XMLLayout output.
com.google.enterprise.connector.logging.XmlFormatter extends
java.util.logging.Formatter, inserting an NDC element.

The XML syntax generated is mildly configuratble by a 
configuration paramater in logging.properties.  By default,
XmlFormatter generates XML that resembles the output from 
java.util.logging.XMLFormatter, with the addition of an 
NDC element to the log record.

The java.util.logging XML output is easily human readable, however
the popular log analyzer tool, Chainsaw, while it can read 
java.util.logging files, does not recognize the NDC addition.

This formatter supports a configuration property that will 
change the generated output to resemble that of log4j, 
rather than java.util.logging.  The log4j-compatible output
is parsable by Chainsaw, including the additional NDC data.

To use this custom XML log Formatter, configure in logging.properties:
classname.of.logging.FileHandler=com.google.enterprise.logging.XmlFormatter

To enable Log4j-compatible output, add the property:
com.google.enterprise.logging.XmlFormatter=log4j
  or 
com.google.enterprise.logging.XmlFormatter=chainsaw


Change Log:
----------
A  projects/connector-manager/source/java/com/google/enterprise/connector/logging/XmlFormatter.java
   - New custom XML log Formatter.